--- a/task-4.html
+++ b/task-4.html
@@ -9,19 +9,19 @@
   </head>
   <body>
     <p><a href="./index.html">Go back</a></p>
-
+<div class="login-container">
     <form class="login-form">
       <label>
         Email
-        <input type="email" name="email" />
+        <input class="input-task4" type="email" name="email" />
       </label>
       <label>
         Password
-        <input type="password" name="password" />
+        <input class="input-task4 input-margin" type="password" name="password" />
       </label>
-      <button type="submit">Login</button>
+      <button class="btm-submit" type="submit">Log in</button>
     </form>
-
+  </div>
     <script src="./js/task-4.js" type="module"></script>
   </body>
 </html>
